# stellar-intel

./: .env.example  .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.scripts.json  vercel.json  vitest.config.mts  vitest.config.ts
.github/: OSS_WEEK_CONTRIBUTOR_BOARD.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: globals.css  layout.tsx  page.tsx
constants/: index.ts
contexts/: WalletContext.tsx
contracts/reputation/: .gitignore  Cargo.toml
contracts/reputation/src/: admin.rs  anchors.rs  lib.rs
contracts/reputation/tests/: basic.rs  gas.rs
docs/: ANCHOR_ONBOARDING.md  ANCHOR_REPUTATION.md  ARCHITECTURE.md  MCP.md  PROPOSAL.md  ROADMAP.md  STRICT_LINTING.md
hooks/: useAnchorAuth.ts  useAnchorRates.ts  useFreighter.ts  useWithdrawStatus.ts
lib/: config.ts  env.ts  flags.ts  format.ts  logger.ts  metrics.ts  rate-ranking.ts  reporter.ts  reputation.ts  session.ts  utils.ts
public/: openapi.json
scripts/: create-milestones.mjs  emit-openapi.mts  gas-report.ts
tests/: ScorecardCard.spec.tsx  WalletButton.spec.tsx  aggregate-perf.spec.ts  anchors-discovery.spec.ts  api-intent.spec.ts  composite.spec.ts  compute-total.spec.ts  dispute-api.spec.ts  dispute-flow.spec.tsx  errors-classification.spec.ts  errors.spec.ts  freighter-detect.spec.tsx  intent-e2e.spec.ts  intent-hash.spec.ts  intent-replay.spec.ts  intent-schema.spec.ts  intent-sign.spec.ts  leaderboard-api.spec.ts  logger.spec.ts  mcp-e2e.spec.ts  mcp-offramp.spec.ts  metrics-api.spec.ts  metrics.spec.ts  (+40 more)
(+120 files in other folders)
